# note-gen-dev

./: .cursorrules  .eslintrc.json  .gitignore  .markdownlint.json  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  todo.md  tsconfig.json  vscode-todo-md.md
messages/: en.json  ja.json  pt-BR.json  zh-TW.json  zh.json
scripts/: README.md  clean.ps1  dev.ps1  force-clean.ps1  rebuild.ps1
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: device.rs  lib.rs  main.rs  mcp.rs
src/app/: globals.scss
src/app/core/: layout.tsx
src/app/core/article/: md-editor.tsx  page.tsx  style.scss
src/app/core/article/custom-footer/: export.tsx  history.tsx  index.tsx  sync.tsx  vector-calc.tsx  vector-timer.tsx
src/app/core/article/custom-toolbar/: mark.tsx
src/app/core/article/file/: file-toolbar.tsx  index.tsx  mobile-action-menu.tsx
src/app/core/record/: page.tsx
src/app/core/record/chat/: chat-clipboard.tsx  chat-content.tsx  chat-footer.tsx  chat-header.tsx  chat-input.tsx  chat-language.tsx  chat-link.tsx  chat-placeholder.tsx  chat-preview.tsx  chat-send.tsx  chat-thinking.tsx  clear-chat.tsx  clear-context.tsx  clipboard-monitor.tsx  file-link.tsx  index.tsx  mark-gen.tsx  mcp-button.tsx  model-select.tsx  rag-sources.tsx  rag-switch.tsx
src/app/core/record/mark/: clipboard.tsx  control-file.tsx  control-image.tsx  control-link.tsx  control-scan.tsx  image-gallery.tsx  index.tsx  mark-item.tsx  mark-mobile-actions.tsx  tag-item.tsx  tag-manage.tsx  tag-mobile-actions.tsx
src/app/core/setting/: config.tsx  layout.tsx
src/app/core/setting/about/: updater.tsx
src/app/core/setting/ai/: create.tsx  model-card.tsx  modelSelect.tsx  page.tsx
src/app/mobile/: layout.tsx
src/app/mobile/chat/: page.tsx
src/app/mobile/record/: page.tsx
src/components/: app-sidebar.tsx  audio-player.tsx  recording-dialog.tsx  search-dialog.tsx  speech-recognition-dialog.tsx
src/config/: sync-exclusions.ts
src/db/: chats.ts  marks.ts  tags.ts
src/lib/: ai.ts  audio-converter.ts  audio.ts  event-report.ts  files.ts  fuzzy-search.ts  markdown.ts  ocr.ts  rag.ts
src/lib/imageHosting/: index.ts
src/lib/mcp/: client.ts  integration.ts  server-manager.ts
src/lib/sync/: encode-fetch.ts  gitee.ts
src/stores/: article.ts  chat.ts  mark.ts  mcp.ts  recording.ts  setting.ts  sidebar.ts  speech-recognition.ts  tag.ts
(+28 files in other folders)
