[package]
name = "note-gen"
version = "0.1.0"
description = "A Tauri App"
authors = ["codexu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "protocol-asset", "image-png", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "=1"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.4"
tauri-plugin-http = { version = "=2.3.0", features = ["unsafe-headers"] }
tauri-plugin-os = "2.3"
tauri-plugin-single-instance = "2"
urlencoding = "2.1.3"
percent-encoding = "2.3.0"
fuzzy-matcher = "0.3.7"
rayon = "1.8.0"
tokio = { version = "1", features = ["full"] } 
url = "2.5"
reqwest_dav = "=0.2.1"
tauri-plugin-opener = "2.5"
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-clipboard = "2"
xcap = "=0.6.0"
reqwest_dav = "=0.2.1"
tauri-plugin-process = "2.3"
jieba-rs = { version = "0.7", features = ["textrank"] }
machine-uid = "0.5"

# 修復安全漏洞：glib 和 xcb 只在 Linux 上需要（GTK/X11 相關）
# 將它們放在 Linux 平台特定依賴中，避免在 Windows/macOS 上構建時出現問題
[target.'cfg(target_os = "linux")'.dependencies]
glib = "=0.21.5"
xcb = "=1.6.0"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.tauri]
version = "2"
features = ["tray-icon"]

# 修復安全漏洞
# 強制使用安全版本以修復已知漏洞
# 注意：glib 和 xcb 已在 [dependencies] 中直接聲明，使用直接依賴來覆蓋傳遞依賴
# [patch.crates-io] 不能用於覆蓋同一個源（crates.io）的版本，因此使用直接依賴
